[gd_scene load_steps=5 format=3 uid="uid://byqhm8c0h3rto"]

[ext_resource type="PackedScene" uid="uid://bah7d1ogja26h" path="res://Content/Demo/Assets/Interactables/PraedatumButton/PraedatumBasicButtonCanActivate.glb" id="1_b7k5i"]
[ext_resource type="Script" path="res://Content/Demo/Assets/Interactables/PraedatumButton/PraedatumButtonModel.gd" id="1_xdq83"]
[ext_resource type="PackedScene" uid="uid://blxspp1a8pn4s" path="res://Content/Demo/Assets/Interactables/PraedatumButton/PraedatumBasicButtonPreviouslyActivated.glb" id="2_4kyya"]
[ext_resource type="PackedScene" uid="uid://cft3qiaeu70iw" path="res://Content/Demo/Assets/Interactables/PraedatumButton/PraedatumBasicButtonCannotActivate.glb" id="3_4v8x6"]

[node name="PraedatumButtonModel" type="Node3D"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
script = ExtResource("1_xdq83")

[node name="ScaleNode" type="Node3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)

[node name="PraedatumBasicButtonCanActivate" parent="ScaleNode" instance=ExtResource("1_b7k5i")]
transform = Transform3D(1, 0, -4.23516e-22, 0, 1, -8.35187e-23, -4.23516e-22, -8.35187e-23, 1, 0, 0, 0)

[node name="PraedatumBasicButtonPreviouslyActivated" parent="ScaleNode" instance=ExtResource("2_4kyya")]

[node name="PraedatumBasicButtonCannotActivate" parent="ScaleNode" instance=ExtResource("3_4v8x6")]
visible = false
